--- a/_posts/svm/2017-04-11-smo.md
+++ b/_posts/svm/2017-04-11-smo.md
@@ -14,8 +14,11 @@ tags:
 MathJax.Hub.Config({
   tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
 });
+
+<script type="text/javascript"
+   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js">
 </script>
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
 ## 目标函数推导
 点到超平面的距离公式：
 
