--- a/_posts/svm/2017-04-10-pegasos.md
+++ b/_posts/svm/2017-04-10-pegasos.md
@@ -19,7 +19,7 @@ MathJax.Hub.Config({
 });
 
 </script>
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
 
 
 ## 基本思想
